--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -15,17 +15,6 @@
     padding-bottom: 50px;
 }
 
-/* General styles for the skills section */
-.skw {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 40px;
-    background: linear-gradient(175deg, #210c47, #854df5, #210c47);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-/* Container for the skill cards */
 .skills-container {
     display: flex;
     flex-wrap: wrap;
@@ -37,42 +26,6 @@
     margin: auto;
 }
 
-/* Individual skill box */
-.skbox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-    width: 120px;
-    gap: 10px;
-}
-
-/* Skill card styles */
-.skill-card {
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    width: 130%;
-    height: 150px;
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: var(--tertary-color);
-}
-
-.skbox p {
-    font-size: 18px;
-    font-weight: bold;
-    color: var(--primary-color);
-}
-
-.skill-card:hover {
-    background-color: var(--secondary-color);
-}
-
 /* Image styles */
 .img-size {
     width: 100px;
@@ -80,30 +33,63 @@
     transition: all 0.3s ease-in-out;
 }
 
-.figma {
-    width: 80px;
-    height: auto;
+.skill-card {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background-color: var(--tertary-color);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-/* Hover effects */
-.skbox:hover {
+.skill-card img {
+    width: 100px;
+    fill: #333;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.skill-card:hover {
     transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 }
 
-.skbox:hover .img-size {
-    transform: scale(1.2);
+.card__content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    transform: rotateX(-90deg);
+    transform-origin: bottom;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-@media (max-width: 768px) {
-    .skbox {
-        margin: -90px 5px 30px 5px;
-    }
-    .skills-container{
-        max-width: 100%;
-        margin: auto;
-    }
-    .skw{
-        padding-bottom: 100px;
-        margin-top: -50px;
-    }
+.skill-card:hover .card__content {
+    transform: rotateX(0deg);
+    background-color: var(--secondary-color);
+
+}
+
+.card__title {
+    margin: 0;
+    font-size: 24px;
+    color: white;
+    font-weight: 700;
+}
+
+.skill-card:hover img {
+    scale: 0;
+}
+
+.skill-card p{
+    color: white;
+    padding-top: 35px;
 }
